# cycle_computer

./: .gitignore  CMakeLists.txt  Makefile  cycle_computer.code-workspace  platformio.ini
cycle_transaction_logger/: CMakeLists.txt
cycle_transaction_logger/fw/: cycle_transaction_logger.cpp
cycle_transaction_recorder/: cycle_transaction_recorder.ino
fw/: CMakeLists.txt
fw/gps_transaction_recorder/: gps_transaction.cpp  gps_transaction.h  gps_transaction_recorder.cpp  gps_transaction_recorder.h  gps_transaction_serializer.cpp  gps_transaction_serializer.h
fw/transaction_logger/: CMakeLists.txt  transaction.h  transaction_logger.cpp  transaction_logger.h
include/: interrupt_modes.h
intf/: uart.h
lib/intf/: mcu_time.cpp  mcu_time.h  serial_interface.h  uart.cpp  uart.h
sim/: CMakeLists.txt
sim/app/: main.cpp
sim/uart/: CMakeLists.txt  uart.cpp  uart.h
sim/uart/circular_buffer/: CMakeLists.txt  circular_buffer.h
sim/uart/gps_transaction_list/: gps_transaction_list.h
sim/uart/test/: uart_circular_buffer_integration_test.cc  uart_unittest.cc
sim/uart_ulator/: CMakeLists.txt  uart_sim.cpp  uart_ulator.cpp
sim/uart_ulator/circular_buffer/test/: circular_buffer_unittest.cc
sim/uart_ulator/test/: uart_ulator_circular_buffer_integration_test.cc  uart_ulator_unittest.cc
src/: CMakeLists.txt
src/cycle_transaction_logger/: CMakeLists.txt
src/cycle_transaction_logger/fw/: cycle_transaction_logger.cpp
src/cycle_transaction_logger/sim/: setup_cycle_logger_simulated_fw.cpp  setup_cycle_logger_simulated_hw.cpp  seup_cycle_logger_simulated_hw.cpp
src/fw/: CMakeLists.txt
src/fw/gps_transaction_recorder/: CMakeLists.txt  gps_transaction.cpp  gps_transaction.h  gps_transaction_log_entry.cpp  gps_transaction_log_entry.h  gps_transaction_recorder.cpp  gps_transaction_recorder.h  gps_transaction_serializer.cpp  gps_transaction_serializer.h  gps_transaction_writer.cpp  gps_transaction_writer.h
src/fw/gps_transaction_recorder/nmea_sentence_reader/: CMakeLists.txt  nmea_sentence_reader.cpp  nmea_sentence_reader.h
src/fw/gps_transaction_recorder/nmea_sentence_reader/test/: nmea_sentence_reader_unittest.cc
src/fw/gps_transaction_recorder/test/: gps_transaction_serializer_unittest.cc
src/fw/interrupt_manager/: CMakeLists.txt  InterruptManager.cpp  InterruptManager.h
src/fw/transaction_logger/: CMakeLists.txt  transaction.h  transaction_log_entry.cpp  transaction_log_entry.h  transaction_logger.cpp  transaction_logger.h
src/sim/: CMakeLists.txt
src/sim/SPIFFS_sim/: SPIFFS_sim.cpp  vfs.cpp  vfs.h
src/sim/app/: CMakeLists.txt  main.cpp
src/sim/arduino/: Arduino.h
src/sim/gps_ulator/: CMakeLists.txt  gps_ulator.cpp  gps_ulator.h
src/sim/interrupt_ulator/: CMakeLists.txt  interrupt_ulator.cpp  interrupt_ulator.h
src/sim/mcu/: CMakeLists.txt  mcu_time.cpp  mcu_time_sim.h
src/sim/transaction_loader/: CMakeLists.txt  transaction_loader.cpp  transaction_loader.h
src/sim/uart_ulator/: CMakeLists.txt  uart_sim.cpp  uart_ulator.cpp  uart_ulator.h
src/sim/uart_ulator/circular_buffer/: circular_buffer.cpp
src/sim/ulator/: ulator.h
